# ai-dev-tools-zoomcamp

./: README.md  pyproject.toml
01-todo/todoproject/: settings.py
01-todo/todos/: admin.py  models.py  tests.py  views.py
01-todo/todos/migrations/: 0001_initial.py
01-todo/todos/templates/todos/: base.html  todo_confirm_delete.html  todo_form.html  todo_list.html
02-end-to-end/: docker-compose.yml  test.db
02-end-to-end/backend/: AGENTS.md  Dockerfile  db.py  init_db.py  main.py  models.py  openapi.yaml  pyproject.toml  test_main.py  verify_api.py
02-end-to-end/backend/tests_integration/: test_integration.py
02-end-to-end/frontend/: Dockerfile  jest.config.js  nginx.conf  package-lock.json  package.json
02-end-to-end/frontend/src/: App.css
02-end-to-end/frontend/src/api/: mockApi.js
02-end-to-end/frontend/src/components/: AuthForm.jsx  GameMenu.jsx  Leaderboard.jsx  SnakeGame.jsx  WatchGame.jsx
02-end-to-end/frontend/src/pages/: Home.jsx
02-end-to-end/frontend/src/tests/: App.test.jsx
03-mcp/: count_data.py  download_zip.py  extract_md_files.py  main.py  search.py  test.py
Project Attempt 1/: .gitignore  README.md  docker-compose.yml  masterplan.md  reproducable.md  requirements.txt
Project Attempt 1/backend/: db_init.py  main.py
Project Attempt 1/frontend/: .dockerignore  main.py
Project Attempt 1/frontend/static/: style.css
Project Attempt 1/frontend/templates/: index.html
