[project]
name = "ai-dev-tools-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.21.0",
    "django>=5.2.8",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[tool.uv.workspace]
members = [
    "02-end-to-end/backend",
]
